--- a/BlackCable/BlackCable/BlackCable.vcxproj.filters
+++ b/BlackCable/BlackCable/BlackCable.vcxproj.filters
@@ -28,6 +28,12 @@
     <ClCompile Include="Menu.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="BCE\Mesh.cpp">
+      <Filter>BCE</Filter>
+    </ClCompile>
+    <ClCompile Include="BCE\Shader.cpp">
+      <Filter>BCE</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BCE\Platform.h">
@@ -41,6 +47,12 @@
     </ClInclude>
     <ClInclude Include="Menu.h">
       <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="BCE\Mesh.h">
+      <Filter>BCE</Filter>
+    </ClInclude>
+    <ClInclude Include="BCE\Shader.h">
+      <Filter>BCE</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
