--- a/BlackCable/BlackCable/BlackCable.vcxproj.filters
+++ b/BlackCable/BlackCable/BlackCable.vcxproj.filters
@@ -43,6 +43,9 @@
     <ClCompile Include="BCE\Camera.cpp">
       <Filter>BCE</Filter>
     </ClCompile>
+    <ClCompile Include="BCE\Light.cpp">
+      <Filter>BCE</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BCE\Platform.h">
@@ -64,6 +67,9 @@
       <Filter>BCE</Filter>
     </ClInclude>
     <ClInclude Include="BCE\Camera.h">
+      <Filter>BCE</Filter>
+    </ClInclude>
+    <ClInclude Include="BCE\Light.h">
       <Filter>BCE</Filter>
     </ClInclude>
   </ItemGroup>
