--- a/BlackCable/BlackCable/BlackCable.vcxproj.filters
+++ b/BlackCable/BlackCable/BlackCable.vcxproj.filters
@@ -43,6 +43,12 @@
     <ClCompile Include="BCE\Camera.cpp">
       <Filter>BCE</Filter>
     </ClCompile>
+    <ClCompile Include="BCE\Texture.cpp">
+      <Filter>BCE</Filter>
+    </ClCompile>
+    <ClCompile Include="BCE\CubeModel.cpp">
+      <Filter>BCE</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BCE\Platform.h">
@@ -64,6 +70,15 @@
       <Filter>BCE</Filter>
     </ClInclude>
     <ClInclude Include="BCE\Camera.h">
+      <Filter>BCE</Filter>
+    </ClInclude>
+    <ClInclude Include="BCE\Texture.h">
+      <Filter>BCE</Filter>
+    </ClInclude>
+    <ClInclude Include="BCE\Model.h">
+      <Filter>BCE</Filter>
+    </ClInclude>
+    <ClInclude Include="BCE\CubeModel.h">
       <Filter>BCE</Filter>
     </ClInclude>
   </ItemGroup>
