--- a/BlackCable/BlackCable/BlackCable.vcxproj
+++ b/BlackCable/BlackCable/BlackCable.vcxproj
@@ -130,6 +130,8 @@
     <ClCompile Include="BCE\CubeModel.cpp" />
     <ClCompile Include="BCE\GameState.cpp" />
     <ClCompile Include="BCE\GameStateManager.cpp" />
+    <ClCompile Include="BCE\Light.cpp" />
+    <ClCompile Include="BCE\Material.cpp" />
     <ClCompile Include="BCE\Mesh.cpp" />
     <ClCompile Include="BCE\Platform.cpp" />
     <ClCompile Include="BCE\Shader.cpp" />
@@ -142,6 +144,8 @@
     <ClInclude Include="BCE\CubeModel.h" />
     <ClInclude Include="BCE\GameState.h" />
     <ClInclude Include="BCE\GameStateManager.h" />
+    <ClInclude Include="BCE\Light.h" />
+    <ClInclude Include="BCE\Material.h" />
     <ClInclude Include="BCE\Mesh.h" />
     <ClInclude Include="BCE\Model.h" />
     <ClInclude Include="BCE\Platform.h" />
@@ -150,8 +154,10 @@
     <ClInclude Include="Menu.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Shaders\Menu\shader.frag" />
-    <None Include="Assets\Shaders\Menu\shader.vert" />
+    <None Include="Assets\Shaders\Menu\gouraud-shader.frag" />
+    <None Include="Assets\Shaders\Menu\gouraud-shader.vert" />
+    <None Include="Assets\Shaders\Menu\phong-shader.frag" />
+    <None Include="Assets\Shaders\Menu\phong-shader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
