--- a/BlackCable/BlackCable/BlackCable.vcxproj
+++ b/BlackCable/BlackCable/BlackCable.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="BCE\Shader.cpp" />
     <ClCompile Include="BCE\ShaderManager.cpp" />
     <ClCompile Include="BCE\Texture.cpp" />
+    <ClCompile Include="BCE\Transform.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
   </ItemGroup>
@@ -159,6 +160,7 @@
     <ClInclude Include="BCE\Shader.h" />
     <ClInclude Include="BCE\ShaderManager.h" />
     <ClInclude Include="BCE\Texture.h" />
+    <ClInclude Include="BCE\Transform.h" />
     <ClInclude Include="Menu.h" />
   </ItemGroup>
   <ItemGroup>
