--- a/BlackCable/BlackCable/BlackCable.vcxproj.filters
+++ b/BlackCable/BlackCable/BlackCable.vcxproj.filters
@@ -14,9 +14,6 @@
     <Filter Include="Archivos de recursos\Shaders">
       <UniqueIdentifier>{4078b757-b253-4da4-9952-76e4371b61a1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Archivos de recursos\Shaders\Menu">
-      <UniqueIdentifier>{896ca5f9-ecf7-4eb0-bfbb-4ef63b01cb23}</UniqueIdentifier>
-    </Filter>
     <Filter Include="BCE\Base">
       <UniqueIdentifier>{002cd6da-8200-457c-8440-dd8b0ec643ab}</UniqueIdentifier>
     </Filter>
@@ -25,6 +22,9 @@
     </Filter>
     <Filter Include="BCE\Lights">
       <UniqueIdentifier>{4412ed54-6b79-43a8-8de9-e7b275482844}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de recursos\Shaders\Default">
+      <UniqueIdentifier>{896ca5f9-ecf7-4eb0-bfbb-4ef63b01cb23}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -155,23 +155,29 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Shaders\Menu\gouraud-shader.frag">
-      <Filter>Archivos de recursos\Shaders\Menu</Filter>
+    <None Include="Assets\Shaders\Default\default.frag">
+      <Filter>Archivos de recursos\Shaders\Default</Filter>
     </None>
-    <None Include="Assets\Shaders\Menu\gouraud-shader.vert">
-      <Filter>Archivos de recursos\Shaders\Menu</Filter>
+    <None Include="Assets\Shaders\Default\default.vert">
+      <Filter>Archivos de recursos\Shaders\Default</Filter>
     </None>
-    <None Include="Assets\Shaders\Menu\phong-shader.frag">
-      <Filter>Archivos de recursos\Shaders\Menu</Filter>
+    <None Include="Assets\Shaders\Default\gouraud-shader.frag">
+      <Filter>Archivos de recursos\Shaders\Default</Filter>
     </None>
-    <None Include="Assets\Shaders\Menu\phong-shader.vert">
-      <Filter>Archivos de recursos\Shaders\Menu</Filter>
+    <None Include="Assets\Shaders\Default\gouraud-shader.vert">
+      <Filter>Archivos de recursos\Shaders\Default</Filter>
     </None>
-    <None Include="Assets\Shaders\Menu\skybox.frag">
-      <Filter>Archivos de recursos\Shaders\Menu</Filter>
+    <None Include="Assets\Shaders\Default\phong-shader.frag">
+      <Filter>Archivos de recursos\Shaders\Default</Filter>
     </None>
-    <None Include="Assets\Shaders\Menu\skybox.vert">
-      <Filter>Archivos de recursos\Shaders\Menu</Filter>
+    <None Include="Assets\Shaders\Default\phong-shader.vert">
+      <Filter>Archivos de recursos\Shaders\Default</Filter>
+    </None>
+    <None Include="Assets\Shaders\Default\skybox.frag">
+      <Filter>Archivos de recursos\Shaders\Default</Filter>
+    </None>
+    <None Include="Assets\Shaders\Default\skybox.vert">
+      <Filter>Archivos de recursos\Shaders\Default</Filter>
     </None>
   </ItemGroup>
 </Project>
