--- a/BlackCable/BlackCable/BlackCable.vcxproj.filters
+++ b/BlackCable/BlackCable/BlackCable.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClCompile Include="Player.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="BCE\Graphic\Text.cpp">
+      <Filter>BCE\Graphic</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BCE\Base\GameState.h">
@@ -153,6 +156,9 @@
     <ClInclude Include="Player.h">
       <Filter>Game</Filter>
     </ClInclude>
+    <ClInclude Include="BCE\Graphic\Text.h">
+      <Filter>BCE\Graphic</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Shaders\Default\default.frag">
@@ -177,6 +183,12 @@
       <Filter>Archivos de recursos\Shaders\Default</Filter>
     </None>
     <None Include="Assets\Shaders\Default\skybox.vert">
+      <Filter>Archivos de recursos\Shaders\Default</Filter>
+    </None>
+    <None Include="Assets\Shaders\Default\Text-Shader.frag">
+      <Filter>Archivos de recursos\Shaders\Default</Filter>
+    </None>
+    <None Include="Assets\Shaders\Default\Text-Shader.vert">
       <Filter>Archivos de recursos\Shaders\Default</Filter>
     </None>
   </ItemGroup>
